--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-# crie um arquivo chamado ".env.local" com as chaves de api 
+DB_HOST=localhost
+DB_USER=seu_usuario
+DB_PASSWORD=sua_senha
+DB_DATABASE=projeto_jwt_db
+PORT=3000
+JWT_SECRET=segredoSuperSecreto123
