--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+# Dependencies
+/node_modules
+
+# Environment Variables
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
+.DS_Store
