--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "🐾 API de Adoção de Pets\r Bem-vindo à API de Adoção de Pets! Este projeto visa fornecer uma plataforma robusta e amigável para conectar animais de estimação em busca de um lar com seus futuros tutores.",
   "main": "server.js",
   "scripts": {
+    "db": "node src/database/initDB.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
