--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=seu_usuario
 DB_PASSWORD=sua_senha
-DB_DATABASE=projeto_jwt_db
+DB_DATABASE=pets_db
 PORT=3000
 JWT_SECRET=segredoSuperSecreto123
